--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "private": true,
   "keywords": [],
   "scripts": {
-    "start": "npm start",
-    "build": "npm build"
+    "start": "npm run start",
+    "build": "npm run build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
